[package]
name = "agave-syscalls"
description = "Agave implementation of the Solana syscalls."
documentation = "https://docs.rs/agave-syscalls"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]

[dependencies]
num-traits = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sbpf = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
